Fix: footer columns bottom margin on mobile

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -109,6 +109,12 @@
 		padding: 2rem 1rem;
 		font-size: 0.8rem;
 
+		@include media-breakpoint-down(md) {
+			.col {
+				padding-bottom: 1.4rem;
+			}
+		}
+
 		a, a:hover, a:visited {
 			color: lighten($navy, 65%);
 		}
